My Protfolio add css responsive

--- a/HTML/portFolioAssignment.html
+++ b/HTML/portFolioAssignment.html
@@ -3,38 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../portfolio_css/assets/css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body>
-<div>
-    <div>
-        <a href="portFolioHome.html" ><b>HOME</b></a>
-        <a href="portFolioAbout.html"><b>ABOUT</b></a>
-        <a href="portFolioProject.html"><b>PROJECT</b></a>
-        <a href="portFolioAssignment.html" ><b>ASSIGNMENT</b></a>
-        <a href="portFolioGallery.html" ><b>GALLERY</b></a>
-        <a href="portFolioContact.html"><b>CONTACT</b></a>
-    </div>
-        <div >
-            <a href="whatsapp" ><img src="../assets/image/whatsapp.png" alt="whatsapp"></a>
-            <a href="linkin"><img src="../assets/image/linkin.png" alt="linkin"></a>
-            <a href="facebook"><img src="../assets/image/facebook.png" alt="facebook"></a>
-            <a href="instagram"><img src="../assets/image/instagram.png" alt="instagram"></a>
+<body id="assignment_bdy" >
+<header class="header">
+    <nav class="nav">
+        <div>
+            <a href="index.html" ><b>HOME</b></a>
+            <a href="portFolioAbout.html"><b>ABOUT</b></a>
+            <a href="portFolioProject.html"><b>PROJECT</b></a>
+            <a href="portFolioAssignment.html" ><b>ASSIGNMENT</b></a>
+            <a href="portFolioGallery.html" ><b>GALLERY</b></a>
+            <a href="portFolioContact.html"><b>CONTACT</b></a>
         </div>
-    </div>
+        <div class="icon">
+            <a href="https://github.com/WDinithi"><img src="../assets/image/github.png" alt="github" class="social"></a>
+            <a href="www.whatsapp.com" target="_blank"><img src="../assets/image/whatsapp.png" alt="whatsapp" class="social"></a>
+            <a href="www.linkin.com" target="_blank"><img src="../assets/image/linkin.png" alt="linkin"  class="social"></a>
+            <a href="www.facebook.com" target="_blank"><img src="../assets/image/facebook.png" alt="facebook" class="social"></a>
+            <a href="www.instagram.com" target="_blank"><img src="../assets/image/instagram.png" alt="instagram" class="social"></a>
+        </div>
+    </nav>
 
-    <h1>Assignment</h1>
-    <img src="../assets/image/Rectangle.png" alt="project">
-    <h3>Assignment 1</h3>
-    <img src="../assets/image/Rectangle.png" alt="project">
-    <h3>Assignment 2</h3>
-    <img src="../assets/image/Rectangle.png" alt="project">
-    <h3>Assignment 3</h3>
-    <img src="../assets/image/Rectangle.png" alt="project">
-    <h3>Assignment 4</h3>
-    <img src="../assets/image/Rectangle.png" alt="project">
-    <h3>Assignment 5</h3>
-    <img src="../assets/image/Rectangle.png" alt="project">
-    <h3>Assignment 6</h3>
 
+</header>
+
+<div id="assignment" >
+    <h1 class="title">Assignment</h1>
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/Case%201" target="_blank"><img src="../assets/image/image(1).jpeg" alt="project" class="assignment" id="assignment1"></a>
+    <h3 id="ah3_1">Assignment 1</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%202" target="_blank"><img src="../assets/image/image(2).jpg" alt="project" class="assignment" id="assignment2"></a>
+    <h3 id="ah3_2">Assignment 2</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%203" target="_blank"><img src="../assets/image/image(3).jpeg" alt="project" class="assignment" id="assignment3"></a>
+    <h3 id="ah3_3">Assignment 3</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%204" target="_blank"> <img src="../assets/image/image(4).jpg" alt="project" class="assignment" id="assignment4"></a>
+    <h3 id="ah3_4">Assignment 4</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%205" target="_blank"><img src="../assets/image/images(5).jpeg" alt="project" class="assignment" id="assignment5"></a>
+    <h3 id="ah3_5">Assignment 5</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%206" target="_blank"><img src="../assets/image/images(6).jpeg" alt="project" class="assignment" id="assignment6"></a>
+    <h3 id="ah3_6">Assignment 6</h3>
+
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/Case%201" target="_blank"><img src="../assets/image/image(1).jpeg" alt="project" class="assignment" id="assignment7"></a>
+    <h3 id="ah3_7">Assignment 7</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%202" target="_blank"><img src="../assets/image/image(2).jpg" alt="project" class="assignment" id="assignment8"></a>
+    <h3 id="ah3_8">Assignment 8</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%203" target="_blank"><img src="../assets/image/image(3).jpeg" alt="project" class="assignment" id="assignment9"></a>
+    <h3 id="ah3_9">Assignment 9</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%204" target="_blank"> <img src="../assets/image/image(4).jpg" alt="project" class="assignment" id="assignment10"></a>
+    <h3 id="ah3_10">Assignment 10</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%205" target="_blank"><img src="../assets/image/images(5).jpeg" alt="project" class="assignment" id="assignment11"></a>
+    <h3 id="ah3_11">Assignment 11</h3>
+
+    <a href="https://github.com/WDinithi/Assignment_3/tree/master/case%206" target="_blank"><img src="../assets/image/images(6).jpeg" alt="project" class="assignment" id="assignment12"></a>
+    <h3 id="ah3_12">Assignment 12</h3>
+
+</div>
+
+
+<script>
+    AOS.init();
+
+</script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
