--- a/HTML/portFolioGallery.html
+++ b/HTML/portFolioGallery.html
@@ -3,43 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../portfolio_css/assets/css/style.css">
+
 </head>
-<body>
-<div>
-    <div>
-        <a href="portFolioHome.html" ><b>HOME</b></a>
-        <a href="portFolioAbout.html"><b>ABOUT</b></a>
-        <a href="portFolioProject.html"><b>PROJECT</b></a>
-        <a href="portFolioAssignment.html" ><b>ASSIGNMENT</b></a>
-        <a href="portFolioGallery.html" ><b>GALLERY</b></a>
-        <a href="portFolioContact.html"><b>CONTACT</b></a>
-
-    </div>
+<body id="glryBody">
+<header class="header">
+    <nav class="nav">
         <div>
-            <a href="whatsapp" ><img src="../assets/image/whatsapp.png" alt="whatsapp"></a>
-            <a href="linkin"><img src="../assets/image/linkin.png" alt="linkin"></a>
-            <a href="facebook"><img src="../assets/image/facebook.png" alt="facebook"></a>
-            <a href="instagram"><img src="../assets/image/instagram.png" alt="instagram"></a>
+            <a href="index.html" ><b>HOME</b></a>
+            <a href="portFolioAbout.html"><b>ABOUT</b></a>
+            <a href="portFolioProject.html"><b>PROJECT</b></a>
+            <a href="portFolioAssignment.html" ><b>ASSIGNMENT</b></a>
+            <a href="portFolioGallery.html" ><b>GALLERY</b></a>
+            <a href="portFolioContact.html"><b>CONTACT</b></a>
         </div>
-    </div>
+        <div class="icon">
+            <a href="https://github.com/WDinithi"><img src="../assets/image/github.png" alt="github" class="social"></a>
+            <a href="www.whatsapp.com" target="_blank"><img src="../assets/image/whatsapp.png" alt="whatsapp" class="social"></a>
+            <a href="www.linkin.com" target="_blank"><img src="../assets/image/linkin.png" alt="linkin"  class="social"></a>
+            <a href="www.facebook.com" target="_blank"><img src="../assets/image/facebook.png" alt="facebook" class="social"></a>
+            <a href="www.instagram.com" target="_blank"><img src="../assets/image/instagram.png" alt="instagram" class="social"></a>
+        </div>
+    </nav>
+</header>
 
+    <div id="imgDiv1">
+        <img src="../assets/image/1.jpg" alt="dinithi" id="img2Gallery" class="gallery">
+        <img src="../assets/image/2.jpg" alt="dinithi" id="img3Gallery" class="gallery">
+        <img src="../assets/image/3.jpg" alt="dinithi" id="img4Gallery" class="gallery">
+        <img src="../assets/image/4.jpg" alt="dinithi" id="img5Gallery" class="gallery">
+        <img src="../assets/image/5.jpg" alt="dinithi" id="img6Gallery" class="gallery">
+        <img src="../assets/image/6.jpg" alt="dinithi" id="img13Gallery" class="gallery">
 
-<div>
-    <img src="../assets/image/1.jpg" alt="">
-    <img src="../assets/image/2.jpg" alt="">
-    <img src="../assets/image/3.jpg" alt="">
-    <img src="../assets/image/4.jpg" alt="">
-    <img src="../assets/image/5.jpg" alt="">
-    <img src="../assets/image/6.jpg" alt="">
-    <img src="../assets/image/8.jpg" alt="">
-    <img src="../assets/image/9.jpg" alt="">
-    <img src="../assets/image/10.jpg" alt="">
-    <img src="../assets/image/11.jpg" alt="">
-    <img src="../assets/image/12.jpg" alt="">
-    <img src="../assets/image/13.jpg" alt="">
 </div>
 
-
+    <div id="imgDiv2" >
+        <img src="../assets/image/10.png" alt="dinithi" id="img16Gallery" class="gallery">
+        <img src="../assets/image/14.jpg" alt="dinithi" id="img17Gallery" class="gallery">
+        <img src="../assets/image/Dinithi.jpg" alt="dinithi" id="img18Gallery" class="gallery">
+        <img src="../assets/image/15.jpg" alt="dinithi" id="img19Gallery" class="gallery">
+        <img src="../assets/image/newImages/7.jpg" alt="dinithi" id="img7Gallery" class="gallery">
+        <img src="../assets/image/newImages/9.jpg" alt="dinithi" id="img9Gallery" class="gallery">
+        <img src="../assets/image/newImages/10.jpg" alt="dinithi" id="img10Gallery" class="gallery">
+        <img src="../assets/image/newImages/11.jpg" alt="dinithi" id="img11Gallery" class="gallery">
+        <img src="../assets/image/newImages/23.jpg" alt="dinithi" id="img23Gallery" class="gallery">
+        <img src="../assets/image/newImages/24.jpg" alt="dinithi" id="img24Gallery" class="gallery">
+ </div>
 
 </body>
 </html>
