--- a/HTML/portFolioAbout.html
+++ b/HTML/portFolioAbout.html
@@ -3,92 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../portfolio_css/assets/css/style.css">
 </head>
-<body>
-<div>
-    <div>
-        <a href="portFolioHome.html" ><b>HOME</b></a>
-        <a href="portFolioAbout.html"><b>ABOUT</b></a>
-        <a href="portFolioProject.html"><b>PROJECT</b></a>
-        <a href="portFolioAssignment.html" ><b>ASSIGNMENT</b></a>
-        <a href="portFolioGallery.html" ><b>GALLERY</b></a>
-        <a href="portFolioContact.html"><b>CONTACT</b></a>
-        <div align="Right">
-            <a href="whatsapp" ><img src="../assets/image/whatsapp.png" alt="whatsapp"></a>
-            <a href="linkin"><img src="../assets/image/linkin.png" alt="linkin"></a>
-            <a href="facebook"><img src="../assets/image/facebook.png" alt="facebook"></a>
-            <a href="instagram"><img src="../assets/image/instagram.png" alt="instagram"></a>
+
+
+<body id="about_body">
+
+<header class="header">
+    <nav class="nav">
+        <div>
+            <a href="index.html" ><b>HOME</b></a>
+            <a href="portFolioAbout.html"><b>ABOUT</b></a>
+            <a href="portFolioProject.html"><b>PROJECT</b></a>
+            <a href="portFolioAssignment.html" ><b>ASSIGNMENT</b></a>
+            <a href="portFolioGallery.html" ><b>GALLERY</b></a>
+            <a href="portFolioContact.html"><b>CONTACT</b></a>
         </div>
+        <div class="icon">
+            <a href="https://github.com/WDinithi"><img src="../assets/image/github.png" alt="github" class="social"></a>
+            <a href="www.whatsapp.com" target="_blank"><img src="../assets/image/whatsapp.png" alt="whatsapp" class="social"></a>
+            <a href="www.linkin.com" target="_blank"><img src="../assets/image/linkin.png" alt="linkin"  class="social"></a>
+            <a href="www.facebook.com" target="_blank"><img src="../assets/image/facebook.png" alt="facebook" class="social"></a>
+            <a href="www.instagram.com" target="_blank"><img src="../assets/image/instagram.png" alt="instagram" class="social"></a>
+        </div>
+    </nav>
+</header>
+<section id="section1">
+    <div id="About" class="aboutClass">
+        <h2 class="title">About</h2>
     </div>
 
-</div>
+    <div id="img2">
+        <img src="../assets/image/newImages/4.jpg" alt="img" id="imgAbout">
+    </div>
+    <div id="about_P" >
+        <p >
+            Birthday - 2002.07.04<br>
+            Phone  - 076 1744815 <br>
+            City  - Mathugama <br>
+            Age  - 21 Years old <br>
+            E-mail -
+            wijewardanadinithi@gmail.com <br>
+            Freelance - Available <br>
+            School  - St. Mary's College <br>
+            University - IJSE
+        </p>
+        <a href="#section2"><img src="../assets/image/newImages/next.png" alt="" class="next"></a>
+    </div>
+</section>
+
+<section id="section2">
+
+    <div id="education">
+        <div id="section3Img">
+            <a href="#section1"><img src="../assets/image/newImages/previous.png" alt=""  id="previous2"></a>
+            <a href="#section3"><img src="../assets/image/newImages/next.png" alt=""  id="next1"></a>
+
+        </div>
+        <h2 class="edu_h2">Education</h2>
+
+    </div>
+    <div id="education_p">
+        <p>
+            G.C.E.(O/L) Examination Complicated. <br><br>
+
+            G.C.E(A/L) Examination Complicated.<br><br>
+
+            I am Successfully Completed Certificate Course in Computer Applications.<br><br>
+
+            I am Successfully Completed Certificate Course in Web Design.<br><br>
+
+            I am Followed Certificate Course in Hardware & Networking.<br><br>
+
+            I am Successfully Completed Cisco Networking & Packet transfer Course.<br><br>
+
+            I am Study in St. Mary's College Mathugama.<br><br>
+
+            I am Studding in Institute of Software engineer.</p>
+        <br><br>
+    </div>
+
     <div>
-        <h2 >About</h2>
+        <button type="submit" id="bioData">Download BIO DATA</button>
     </div>
 
-    <div>
-        <img src="../assets/image/Dinithi2.png" alt="Dini Photo">
+    </section>
+
+<section id="section3">
+    <div id="about2">
+        <h2 class="title">Skills</h2>
+
+        <div id="skill">
+            <h3>&nbsp; HTML &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;50%</h3>
+            <div class="square"> </div>
+            <h3>&nbsp; CSS&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 50%</h3>
+            <div class="square"></div>
+            <h3>&nbsp; JAVASCRIPT  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;20%</h3>
+            <div class="square"></div>
+            <h3>&nbsp; PHP&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;30%</h3>
+            <div class="square"></div>
+            <h3>&nbsp; PHOTOSHOP &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;40%</h3>
+            <div class="square"></div>
+            <h3>&nbsp; PYTHON&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;50%</h3>
+            <div class="square"></div>
+        </div>
+
     </div>
-    <div >
-    <p>
-        Birthday - 2002.07.04<br>
-        Phone  - 076 1744815 <br>
-        City  - Mathugama <br>
-        Age  - 21 Years old <br>
-        E-mail -
-        wijewardanadinithi@gmail.com
-        Freelance - Available <br>
-        School  - St. Mary's College <br>
-        University - IJSE
-    </p>
-    </div>
-</div>
+    <a href="#section2"><img src="../assets/image/newImages/previous.png" alt="" id="previous1"></a>
 
-<div>
-    <h2>Skills</h2>
-    <h3>HTML                      50%</h3>
-    <h3>CSS                       50%</h3>
-    <h3>JAVASCRIPT                20%</h3>
-    <h3>PHP                       30%</h3>
-    <h3>PHOTOSHOP                 40%</h3>
-    <h3>PYTHON                    50%</h3>
 
-</div>
 
-<div>
-    <br>
-    <br>
-    <br>
-    <h2>Education</h2>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-</div>
-<div >
-    <p>
-        G.C.E.(O/L) Examination Complicated. <br><br>
-
-        G.C.E(A/L) Examination Complicated.<br><br>
-
-        I am Successfully Completed Certificate Course in Computer Applications.<br><br>
-
-        I am Successfully Completed Certificate Course in Web Design.<br><br>
-
-        I am Followed Certificate Course in Hardware & Networking.<br><br>
-
-        I am Successfully Completed Cisco Networking & Packet transfer Course.<br><br>
-
-        I am Study in St. Mary's College Mathugama.<br><br>
-
-        I am Studding in Institute of Software engineer.</p>
-    <br><br>
-</div>
-
-<div>
-    <button type="submit">Download BIO DATA</button>
-</div>
-
+</section>
 </body>
 </html>
