--- a/HTML/portFolioProject.html
+++ b/HTML/portFolioProject.html
@@ -3,37 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../portfolio_css/assets/css/style.css">
 
-<div>
-    <div >
-        <a href="portFolioHome.html" ><b>HOME</b></a>
-        <a href="portFolioAbout.html"><b>ABOUT</b></a>
-        <a href="portFolioProject.html"><b>PROJECT</b></a>
-        <a href="portFolioAssignment.html" ><b>ASSIGNMENT</b></a>
-        <a href="portFolioGallery.html" ><b>GALLERY</b></a>
-        <a href="portFolioContact.html"><b>CONTACT</b></a>
-    </div>
-        <div >
-            <a href="whatsapp" ><img src="../assets/image/whatsapp.png" alt="whatsapp"></a>
-            <a href="linkin"><img src="../assets/image/linkin.png" alt="linkin"></a>
-            <a href="facebook"><img src="../assets/image/facebook.png" alt="facebook"></a>
-            <a href="instagram"><img src="../assets/image/instagram.png" alt="instagram"></a>
+
+</head>
+
+
+
+<body id="Project">
+
+<header class="header">
+    <nav class="nav">
+        <div>
+            <a href="index.html" ><b>HOME</b></a>
+            <a href="portFolioAbout.html"><b>ABOUT</b></a>
+            <a href="portFolioProject.html"><b>PROJECT</b></a>
+            <a href="portFolioAssignment.html" ><b>ASSIGNMENT</b></a>
+            <a href="portFolioGallery.html" ><b>GALLERY</b></a>
+            <a href="portFolioContact.html"><b>CONTACT</b></a>
         </div>
+        <div class="icon">
+            <a href="https://github.com/WDinithi"><img src="../assets/image/github.png" alt="github" class="social"></a>
+            <a href="www.whatsapp.com" target="_blank"><img src="../assets/image/whatsapp.png" alt="whatsapp" class="social"></a>
+            <a href="www.linkin.com" target="_blank"><img src="../assets/image/linkin.png" alt="linkin"  class="social"></a>
+            <a href="www.facebook.com" target="_blank"><img src="../assets/image/facebook.png" alt="facebook" class="social"></a>
+            <a href="www.instagram.com" target="_blank"><img src="../assets/image/instagram.png" alt="instagram" class="social"></a>
+        </div>
+    </nav>
+</header>
+
+<div data-aos="fade-down">
+</div>
+<section id="section1-project">
+<div id="projectDiv0">
+    <h1 class="title">Project</h1>
+    <a href="" target="_blank"><img src="../assets/image/newImages/17.jpg" alt="project" class="project" id="project1"></a>
+    <p class="p_style" id="P1">The purpose of a Pharmacy Management System is to streamline and optimize pharmacy operations. It manages inventory, prescriptions, patient data, and sales while ensuring compliance, safety, and
+        efficiency. This system improves patient care, reduces errors, and enhances overall pharmacy management.</p>
+    <h3 id="h3_1">Project 1</h3>
+
+    <a href="" target="_blank"><img src="../assets/image/newImages/18.jpeg" alt="project" class="project" id="project2"></a>
+    <p class="p_style" id="P2">The purpose of a layered Pharmacy Management System is to efficiently manage pharmacy operations, encompassing inventory, prescriptions, patient data, and sales. Through a structured layered architecture, it ensures compliance, enhances safety, and optimizes
+        efficiency, ultimately improving patient care while minimizing errors in pharmacy management.</p>
+    <h3 id="h3_2">project 2</h3>
+
+    <a href="#section2-project"><img src="../assets/image/newImages/next.png" alt="" class="next" id="project_next"></a>
+
+</div>
+
+
+</section>
+
+
+<section id="section2-project">
+
+    <div id="projectDiv">
+        <a href="" target="_blank"> <img src="../assets/image/newImages/19.jpeg" alt="project" class=project" id="project3"></a>
+        <p class="p_style" id="P3">The purpose of socket programming for a chatbox is to enable real-time communication between users over a network. It facilitates instant text-based messaging, file sharing, and multimedia communication, enhancing online collaboration, social interaction,
+            and remote communication, making it a key component of chat applications and collaborative platforms.</p>
+        <h3 id="h3_3">Project 3</h3>
+
+        <a href="" target="_blank"><img src="../assets/image/newImages/20.jpeg" alt="project" class="project" id="project4"></a>
+        <p class="p_style" id="P4">The purpose of Object-Relational Mapping (ORM) in a chatbox is to simplify the interaction between the application's code and the underlying database. ORM allows developers to work with database entities as objects, easing data retrieval and storage,
+            enabling efficient data management, and enhancing the development of chat applications.</p>
+        <h3 id="h3_4">Project 4</h3>
+        <a href="#section1-project"><img src="../assets/image/newImages/previous.png" alt="" class="next" id="previous-project"></a>
     </div>
-<h1>Project</h1>
-<img src="../assets/image/Rectangle.png" alt="project">
-<h3>project 1</h3>
-<img src="../assets/image/Rectangle.png" alt="project">
-<h3>project 2</h3>
-<img src="../assets/image/Rectangle.png" alt="project">
-<h3>project 3</h3>
-<img src="../assets/image/Rectangle.png" alt="project">
-<h3>project 4</h3>
-<img src="../assets/image/Rectangle.png" alt="project">
-<h3>project 5</h3>
-<img src="../assets/image/Rectangle.png" alt="project">
-<h3>project 6</h3>
+
+</section>
+
 </body>
 </html>
